# cuCV

./: .gitignore  CMakeLists.txt  README.md
doc/: Doxyfile
measurments/: CMakeLists.txt  README.md  addMeasurments.cpp  conv2dMeasurments.cpp  cucvRuntimeMeasurments.cpp  matmulMeasurments.cpp  measurmentsHelper.cpp  plot_runtime_data.ipynb  runMeasurments.sh
src/: CMakeLists.txt  Mat.cu  Mat.h  cumat.cu  cumat.h  cumatinitializers.cu  cumatinitializers.h  devicecumat.cu  devicecumat.h  errorhandling.cpp  errorhandling.h  filter.cpp  filter.h  imread.cpp  imread.h  initializers.cpp  initializers.h  kernel.cu  kernel.h  kernelcumat.cu  kernelcumat.h  linalg.cu  linalg.h  mat.cpp  mat.cu  mat.h
src/include/cimg/: README.txt
tests/: CMakeLists.txt  cuMatTest.cpp  cuMatTest.h  cuMatTestMain.cpp  cumatinitializersTest.cpp  cumatinitializersTest.h  initializersTest.cpp  initializersTest.h  initializersTestMain.cpp  linalgTest.cpp  linalgTest.h  matConstructorsVisualTest.cpp  matTest.cpp  matTest.h  matTestMain.cpp  matrix_multi.cu  unitTestMain.cpp
